# astro

./: ,gitattributes  .babelrc  .codeclimate.yml  .coveralls.yml  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .hound.yml  .travis.yml  AstroDoc.ast  AstroDoc0.0.1.ast  AstroDoc0.1.0.ast  AstroGrammar0.1.0.ebnf  AstroPlayground0.0.1.ast  AstroPlayground0.1.0.ast  AstroPlayground0.2.0.ast  AstroProto.ast  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Codes.ast  LICENSE  MVP.md  README.md  RosettaCode.ast  package-lock.json  package.json  parser_combinator_alt.rs  parser_test1.ast  temp.abnf  test.ast  test1.ast  test2.ast  test3.ast  test4.ast  tsconfig.json
AstroCompiler/: AstroAST.ts  AstroAST0.1.0.js  AstroAST0.1.0.js.map  AstroLexer.ts  AstroLexer0.1.0.js  AstroLexer0.1.0.js.map  AstroLexer0.1.0.ts  AstroMain.ts  AstroMain0.1.0.js  AstroMain0.1.0.js.map  AstroMain0.1.0.ts  AstroParser.ts  AstroParser0.1.0.js  AstroParser0.1.0.js.map  AstroParser0.1.0.ts  AstroUtility.ts  AstroUtility0.1.0.js  AstroUtility0.1.0.js.map  AstroUtility0.1.0.ts  grammar.g4  parser.js  parser.ts
Docs/: AstroDoc.ast  AstroGrammar.abnf  AstroProto.ast
Samples/: Codes.ast  RosettaCode.ast
Tests/: AstroMain.ts  test2.ast
designs/: astro-prompt-design.txt  astro_prompt_design.txt
doc/: experimental.astro  grammar.peg  summary.astro
docs/: README.md  astro-experimental.ast  asts.md  brief.ast  development.ast  experimental.ast  progress.ast  summary.md
examples/: parser.rs  preview.astro
lib/: mod.rs
samples/: README.md  fibonacci.ast  misc.ast  (+5 more)
(+197 files in other folders)
