[package]
name = "astro"
version = "0.1.0"
authors = ["Steve Akinyemi <appcypher@outlook.com>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2018"

[dependencies]
astro-lexer = { path = "lib/lexer", version = "0.1.0" }
astro-parser = { path = "lib/parser", version = "0.1.0" }

[[bin]]
name = "astro-example"
path = "src/astro_example.rs"
